Closed
Bug 1405416
Opened 8 years ago
Closed 6 years ago
Assertion failure: mDocument->GetReadyStateEnum() == nsIDocument::READYSTATE_INTERACTIVE (Bad readyState) [@ txMozillaTextOutput::endDocument]
Categories
(Core :: XSLT, defect, P3)
Core
XSLT
Tracking
()
RESOLVED
FIXED
mozilla73
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr68 | --- | wontfix |
firefox56 | --- | unaffected |
firefox57 | --- | unaffected |
firefox58 | --- | wontfix |
firefox71 | --- | wontfix |
firefox72 | --- | wontfix |
firefox73 | --- | fixed |
People
(Reporter: tsmith, Assigned: peterv)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
Assertion failure: mDocument->GetReadyStateEnum() == nsIDocument::READYSTATE_INTERACTIVE (Bad readyState), at /src/dom/xslt/xslt/txMozillaTextOutput.cpp:90
#0 txMozillaTextOutput::endDocument(nsresult) /src/dom/xslt/xslt/txMozillaTextOutput.cpp:86:9
#1 txMozillaXSLTProcessor::TransformToDoc(nsIDOMDocument**, bool) /src/dom/xslt/xslt/txMozillaXSLTProcessor.cpp:682:25
#2 txMozillaXSLTProcessor::TransformToDocument(nsIDOMNode*, nsIDOMDocument**) /src/dom/xslt/xslt/txMozillaXSLTProcessor.cpp:648:12
#3 txMozillaXSLTProcessor::TransformToDocument(nsINode&, mozilla::ErrorResult&) /src/dom/xslt/xslt/txMozillaXSLTProcessor.cpp:1303:11
#4 mozilla::dom::XSLTProcessorBinding::transformToDocument(JSContext*, JS::Handle<JSObject*>, txMozillaXSLTProcessor*, JSJitMethodCallArgs const&) /src/obj-firefox/dom/bindings/XSLTProcessorBinding.cpp:169:49
#5 mozilla::dom::GenericBindingMethod(JSContext*, unsigned int, JS::Value*) /src/dom/bindings/BindingUtils.cpp:3053:13
#6 js::CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), JS::CallArgs const&) /src/js/src/jscntxtinlines.h:293:15
#7 js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) /src/js/src/vm/Interpreter.cpp:495:16
#8 InternalCall(JSContext*, js::AnyInvokeArgs const&) /src/js/src/vm/Interpreter.cpp:540:12
#9 Interpret(JSContext*, js::RunState&) /src/js/src/vm/Interpreter.cpp:3085:18
#10 js::RunScript(JSContext*, js::RunState&) /src/js/src/vm/Interpreter.cpp:435:12
#11 js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) /src/js/src/vm/Interpreter.cpp:513:15
#12 InternalCall(JSContext*, js::AnyInvokeArgs const&) /src/js/src/vm/Interpreter.cpp:540:12
#13 js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>) /src/js/src/vm/Interpreter.cpp:559:10
#14 JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /src/js/src/jsapi.cpp:2965:12
#15 mozilla::dom::EventListener::HandleEvent(JSContext*, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&) /src/obj-firefox/dom/bindings/EventListenerBinding.cpp:47:8
#16 void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JSCompartment*) /src/obj-firefox/dist/include/mozilla/dom/EventListenerBinding.h:65:12
#17 mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, nsIDOMEvent*, mozilla::dom::EventTarget*) /src/dom/events/EventListenerManager.cpp:1109:9
#18 mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, nsIDOMEvent**, mozilla::dom::EventTarget*, nsEventStatus*) /src/dom/events/EventListenerManager.cpp:1283:20
#19 mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&) /src/dom/events/EventDispatcher.cpp:313:17
#20 mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) /src/dom/events/EventDispatcher.cpp:486:14
#21 mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, nsIDOMEvent*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) /src/dom/events/EventDispatcher.cpp:822:9
#22 mozilla::EventDispatcher::DispatchDOMEvent(nsISupports*, mozilla::WidgetEvent*, nsIDOMEvent*, nsPresContext*, nsEventStatus*) /src/dom/events/EventDispatcher.cpp:888:12
#23 nsINode::DispatchEvent(nsIDOMEvent*, bool*) /src/dom/base/nsINode.cpp:1341:5
#24 nsContentUtils::DispatchEvent(nsIDocument*, nsISupports*, nsTSubstring<char16_t> const&, bool, bool, bool, bool*, bool) /src/dom/base/nsContentUtils.cpp:4516:18
#25 nsContentUtils::DispatchTrustedEvent(nsIDocument*, nsISupports*, nsTSubstring<char16_t> const&, bool, bool, bool*) /src/dom/base/nsContentUtils.cpp:4484:10
#26 nsDocument::DispatchContentLoadedEvents() /src/dom/base/nsDocument.cpp:5509:3
#27 mozilla::detail::RunnableMethodImpl<nsDocument*, void (nsDocument::*)(), true, (mozilla::RunnableKind)0>::Run() /src/obj-firefox/dist/include/nsThreadUtils.h:1192:13
#28 nsThread::ProcessNextEvent(bool, bool*) /src/xpcom/threads/nsThread.cpp:1039:14
#29 NS_ProcessNextEvent(nsIThread*, bool) /src/xpcom/threads/nsThreadUtils.cpp:524:10
#30 mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /src/ipc/glue/MessagePump.cpp:97:21
#31 MessageLoop::RunInternal() /src/ipc/chromium/src/base/message_loop.cc:326:10
#32 MessageLoop::Run() /src/ipc/chromium/src/base/message_loop.cc:299:3
#33 nsBaseAppShell::Run() /src/widget/nsBaseAppShell.cpp:158:27
#34 nsAppStartup::Run() /src/toolkit/components/startup/nsAppStartup.cpp:288:30
#35 XREMain::XRE_mainRun() /src/toolkit/xre/nsAppRunner.cpp:4701:22
#36 XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) /src/toolkit/xre/nsAppRunner.cpp:4865:8
#37 XRE_main(int, char**, mozilla::BootstrapConfig const&) /src/toolkit/xre/nsAppRunner.cpp:4960:21
#38 do_main(int, char**, char**) /src/browser/app/nsBrowserApp.cpp:231:22
#39 main /src/browser/app/nsBrowserApp.cpp:304:16
#40 __libc_start_main /build/glibc-bfm8X4/glibc-2.23/csu/../csu/libc-start.c:291
#41 _start (firefox+0x41eb24)
Flags: in-testsuite?
Comment 1•8 years ago
|
||
INFO: Last good revision: 195987f4eed86acf469016cfbae17d7829e790fa
INFO: First bad revision: 4781ee1472b3e2b7285cb4a86e30674f4427fe62
INFO: Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=195987f4eed86acf469016cfbae17d7829e790fa&tochange=4781ee1472b3e2b7285cb4a86e30674f4427fe62
Hah! No good deed goes unpunished. Any thoughts here, Peter?
Blocks: 1330492
status-firefox56:
--- → unaffected
status-firefox57:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(peterv)
Updated•8 years ago
|
Has Regression Range: --- → yes
Updated•8 years ago
|
Priority: -- → P3
Updated•7 years ago
|
Assignee | ||
Comment 3•6 years ago
|
||
Updated•6 years ago
|
Assignee: nobody → peterv
Assignee | ||
Updated•6 years ago
|
Status: NEW → ASSIGNED
Flags: needinfo?(peterv)
Pushed by pvanderbeken@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e49dc4649823
Assertion failure: mDocument->GetReadyStateEnum() == nsIDocument::READYSTATE_INTERACTIVE (Bad readyState) [@ txMozillaTextOutput::endDocument]. r=bzbarsky
![]() |
||
Comment 5•6 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
status-firefox73:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
Updated•6 years ago
|
status-firefox71:
--- → wontfix
status-firefox72:
--- → wontfix
status-firefox-esr68:
--- → wontfix
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•